[LayoutNG] Honor {min,max}-inline-size when using cached intrinsic size.

We store cached min/max intrinsic inline sizes in legacy layout objects.
These are normally constrained against {min,max}-inline-size, but not
if those values are percentage based, since percentages are obviously
not resolvable at the time of calculating intrinsic sizes. In such cases
we cannot use the cached values directly. Calculate intrinsic size and
apply constraints on our own in such cases.

Bug: 900390
Change-Id: I90b8ab590fa97e8ec7929bc1af38cf3824f9ea6b
Reviewed-on: https://chromium-review.googlesource.com/c/1360853
Reviewed-by: Koji Ishii <kojii@chromium.org>
Reviewed-by: Aleks Totic <atotic@chromium.org>
Reviewed-by: Christian Biesinger <cbiesinger@chromium.org>
Commit-Queue: Morten Stenshorne <mstensho@chromium.org>
Cr-Commit-Position: refs/heads/master@{#613889}
Former-commit-id: 09554587ea7aeaccea14eb54a95660f4e369c7ad